# alex-intelligence-stack

./: .env  README.md  compose.yml  ollama-ui-compose.yml
reverse_proxy_truncate/: .coveragerc  call_api.py  condenser.py  consts.py  proxy.py  proxy_old.py  proxy_only.py  pyproject.toml  pytest.ini  qwen_proxy.py  test_condenser.py  test_integration.py  test_proxy.py
