[project]
name = "reverse-proxy-truncate"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "coloredlogs>=15.0.1",
    "diskcache>=5.6.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "openai>=1.100.2",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "gevent>=25.9.1",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

#[tool.coverage.run]
#concurrency = ["gevent"]
#
#[tool.pytest.ini_options]
#addopts = "--cov=reverse-proxy-truncate --cov-report html"
#log_cli = true